@@ -2,6 +2,7 @@ Open-MX 1.0.902 aka 1.1-rc2
 ========================================================
 
 Changes:
+* Enable thread-safety by default.
 * The OMX_IFACES variable in open-mx.conf replaces the old IFACES.
 * make install does not build anymore, make should be invoked first.
 * Allow disabling udev support at make install with udev=0.
